--- a/static/style/base.css
+++ b/static/style/base.css
@@ -24,7 +24,6 @@ html {
     line-height: 1.4;
 }
 
-
 body {
     margin: 0px;
     padding: 0px;
@@ -40,6 +39,10 @@ a:-webkit-any-link {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+}
+
+input:focus, textarea:focus, select:focus{
+    outline: none;
 }
 
 .shadowed {
